[tool.poetry]
name = "blog_with_flask"
version = "0.1.0"
description = ""
authors = ["SoheeKANG <hnb4831@naver.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.1"
SQLAlchemy = "^1.4.17"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
